@@ -14,6 +14,8 @@ option(enable-lgpl "Enable only LGPL part of MathGL" OFF)
 option(enable-pthread "Enable POSIX threads support")
 option(enable-gsl "Enable gsl support")
 option(enable-jpeg "Enable jpeg support")
+option(enable-png "Enable png support" ON)
+option(enable-zlib "Enable zlib support" ON)
 #option(enable-u3d "Enable u3d support")
 option(enable-pdf "Enable pdf support")
 option(enable-gif "Enable gif support")
@@ -45,16 +47,6 @@ message(STATUS "Class mglDataA is switched off.")
 else(enable-simple)
 	set(MGL_NO_DATA_A 0)
 endif(enable-simple)
-
-include(FindZLIB)
-if(NOT ZLIB_FOUND)
-	message(SEND_ERROR "Couldn't find ZLIB library.")
-endif(NOT ZLIB_FOUND)
-
-include(FindPNG)
-if(NOT PNG_FOUND)
-	message(SEND_ERROR "Couldn't find PNG libraries.")
-endif(NOT PNG_FOUND)
 
 if((enable-all OR enable-gsl) AND (NOT enable-lgpl) )
 	set(MGL_HAVE_GSL 1)
@@ -134,6 +126,31 @@ else(enable-all OR enable-jpeg)
 	set(MGL_HAVE_JPEG 0)
 endif(enable-all OR enable-jpeg)
 
+
+if(enable-all OR enable-zlib)
+	set(MGL_HAVE_ZLIB 1)
+	include(FindZLIB)
+	if(NOT ZLIB_FOUND)
+		message(SEND_ERROR "Couldn't find ZLib library.")
+	endif(NOT ZLIB_FOUND)
+else(enable-all OR enable-zlib)
+	set(MGL_HAVE_ZLIB 0)
+endif(enable-all OR enable-zlib)
+
+if(enable-all OR enable-png)
+	set(MGL_HAVE_PNG 1)
+	if(NOT MGL_HAVE_ZLIB)
+		message(SEND_ERROR "You have to enable ZLib if you plan to use PNG export.")
+	endif(NOT MGL_HAVE_ZLIB)
+	include(FindPNG)
+	if(NOT PNG_FOUND)
+		message(SEND_ERROR "Couldn't find PNG library.")
+	endif(NOT PNG_FOUND)
+else(enable-all OR enable-png)
+	set(MGL_HAVE_PNG 0)
+endif(enable-all OR enable-png)
+
+
 # if(enable-u3d AND (NOT enable-lgpl) )
 # 	set(MGL_HAVE_U3D 1)
 # 	find_library(U3D_LIB IDTF)
@@ -152,13 +169,16 @@ endif(enable-all OR enable-jpeg)
 
 if((enable-all OR enable-pdf) AND (NOT enable-lgpl) )
 	set(MGL_HAVE_PDF 1)
+	if(NOT MGL_HAVE_PNG)
+		message(SEND_ERROR "You have to enable PNG if you plan to use PDF export.")
+	endif(NOT MGL_HAVE_PNG)
 	find_library(HPDF_LIB hpdf)
 	if(NOT HPDF_LIB)
 		message(SEND_ERROR "Couldn't find libHaru.")
 	endif(NOT HPDF_LIB)
 	find_path(HPDF_INCLUDE_DIR hpdf_u3d.h)
 	if(NOT HPDF_INCLUDE_DIR)
-		message(SEND_ERROR "Couldn't find headers of 3d-enabled version of libHaru.")
+		message(SEND_ERROR "Couldn't find headers of 3d-enabled version of libhpdf.")
 	endif(NOT HPDF_INCLUDE_DIR)
 #	message(STATUS "Found libHaru library at: ${HPDF_LIB}")
 #	message(STATUS "Found libHaru headers: ${HPDF_INCLUDE_DIR}")
